Fix contact form on mobile

--- a/src/assets/css/_sass/pages/_contact.scss
+++ b/src/assets/css/_sass/pages/_contact.scss
@@ -46,7 +46,7 @@
   height: 680px;
   margin-top: 120px;
   margin-bottom: 120px;
-  width: 800px;
+  max-width: 800px;
 
   .contact-page__field {
     display: flex;
